create-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-compose
metadata:
  name: busybox
