create_networkpolicies.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: networkpolicy1
  namespace: docker-compose
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: network == 'docker-compose'
metadata:
  name: networkpolicy2
  namespace: busybox
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: network == 'busybox'
